[metadata]
name = locked-dict

[bdist_wheel]
universal = 1


[tool:pytest]
testpaths = test
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 42
inline-quotes = '
multiline-quotes = """
ignore = E203, W503
[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=locked-dict
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
