[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Implementation of dict supporting context managed thread safe and mutable iterations through a lock.
home_page = https://github.com/sthagen/locked-dict

keywords =
    code-generation
    developer-tools
    markdown
    validation
    verification

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = locked-dict

project_urls =
    Bug Tracker = https://github.com/sthagen/locked-dict/issues
    Documentation = https://codes.dilettant.life/docs/locked-dict/
    Source Code = https://git.sr.ht/~sthagen/locked-dict

url = https://git.sr.ht/~sthagen/locked-dict
version = 2022.7.23

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
python_requires = >=3.8

install_requires =

packages = find:

[options.entry_points]

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = test
filterwarnings = error

[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=laskea
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
[flake8]
max-line-length = 120
max-complexity = 42
ignore = E203, W503
inline-quotes = '
multiline-quotes = """
